# Darknet_old

./: .gitignore  CMakeLists.txt  Makefile
cfg_curve/: yolo3-tiny_curve.cfg  yolo3_curve.cfg
cfg_ts/: yolo3_ts.cfg
examples/: decrypt_weights.c  detector.c  encrypt_weights.c  video_runner.c
include/: darknet.h
src/: compare.c  data.c  data.h  demo.c  image.c  image.h  image_opencv.cpp  parser.c  video_detect.c  video_detect.h
ts_cfg/: ts.data  ts_notest.data  yolo3-tiny_ts.cfg  yolo3_ts.cfg
